--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "tauri": "tauri",
     "tauri:dev": "tauri dev",
     "tauri:build": "tauri build",
-    "start": "npm run tauri:dev"
+    "start": "npm run tauri:dev",
+    "lint:css": "stylelint \"src/**/*.{css,scss}\"",
+    "lint:css:fix": "stylelint \"src/**/*.{css,scss}\" --fix",
+    "lint": "npm run lint:css"
   },
   "dependencies": {
     "@tanstack/react-table": "^8.21.3",
@@ -32,6 +35,9 @@
     "@vitejs/plugin-react": "^4.6.0",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6",
+    "stylelint": "^14.16.1",
+    "stylelint-config-prettier": "^9.0.5",
+    "stylelint-config-standard": "^29.0.0",
     "tailwindcss": "^4.1.13",
     "typescript": "~5.8.3",
     "vite": "^7.0.4"
